# lumen-agent

./: .gitignore  CHANGELOG.md  LICENSE  LUMEN_SPEC.md  MANIFESTO.md  README.md  pyproject.toml
.atl/: skill-registry.md
docs/: PLAN_REMOTE_CATALOGS_AND_PYPI.md
lumen/: __init__.py
lumen/catalog/: index.yaml
lumen/channels/: web.py
lumen/cli/: main.py
lumen/core/: agent_status.py  artifact_setup.py  awareness.py  brain.py  capability_consciousness.py  catalog.py  cerebellum.py  confirmation_gate.py  connectors.py  discovery.py  distiller.py  events.py  handlers.py  inbox.py  installer.py  lessons.py  marketplace.py  mcp.py  memory.py  model_router.py  model_tiers.py  module_manifest.py  module_runtime.py  output_types.py  personality.py  provider_health.py  registry.py  runtime.py  secrets_store.py  session.py  (+1 more)
neo/: __init__.py
tests/: test_agent_status.py  test_artifact_setup.py  test_awareness.py  test_brain.py  test_cerebellum.py  test_distiller.py  test_inbox.py  test_install_bridge.py  test_kits_productivos.py  test_lessons.py  test_marketplace.py  test_mcp_runtime.py  test_model_router.py  test_module_channels_discovery.py  test_module_manifests.py  test_module_skills_discovery.py  test_native_handlers.py  test_openrouter_oauth.py  test_output_types.py  test_personality_ui_config.py  test_provider_health.py  test_remote_catalogs.py  test_rest_chat.py  test_shared_capabilities.py  test_skill_interpolation.py  test_skill_interpolation_runtime.py  test_telegram_module.py  test_terminal_connector.py  test_tool_policy.py  test_web_surfaces.py
(+55 files in other folders)
